<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".Registro">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logouisrael"
            android:contentDescription="@string/ivUisrael"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ivImagen">

        <TextView
            android:id="@+id/tvUsuarioRecibe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvNombre"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etNombre" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMontoInicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvMontoInicial"/>

        <EditText
            android:id="@+id/etMontoInicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etMontoInicial" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPagoMensual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPagoMensual"/>

        <EditText
            android:id="@+id/etPagoMensual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:hint="@string/etPagoMensual" />
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Calcular"
            android:text="@string/btnCalcular" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTotal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Guardar"
            android:text="@string/btnGuardar" />
    </LinearLayout>

</LinearLayout>