<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/ivImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logouisrael"
        android:contentDescription="@string/ivUisrael"/>

    <LinearLayout
        android:id="@+id/lyUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ivImagen">

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvUsuario"
            android:layout_below="@id/ivImagen"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/etUsuario"
            />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivImagen"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/etUsuario" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/lyUsuario">

        <TextView
            android:id="@+id/tvContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvContrasena"
            android:layout_below="@id/tvUsuario"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/etContrasena" />

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUsuario"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/etContrasena"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/lyContrasena">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyContrasena"
            android:layout_alignParentRight="true"
            android:onClick="Ingresar"
            android:text="@string/btnIngresar" />

    </LinearLayout>

</RelativeLayout>